fixed overflow on x

--- a/src/styles.css
+++ b/src/styles.css
@@ -465,6 +465,8 @@ body{
     height: 100svh;
     width: 100vw;
     border-radius: 10px;
+    overflow-x: hidden;
+    margin: 0;
 
 }
 
@@ -558,6 +560,7 @@ h3{
     height: 90%;
     width: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
 
 }
 
@@ -573,6 +576,7 @@ h3{
     margin: 20px auto;
     padding: 5px;
     border-bottom: solid 1px rgba(123, 123, 123, 0.2);
+    overflow-x: hidden;
 
 }
 
